# secureLSL

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  mkdocs.yml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: BENCHMARK_REPORT.md  TEST_PROTOCOL.md  requirements.txt
benchmarks/figures/cross_machine/: summary_table.md  summary_table.tex
benchmarks/figures/cross_machine_ethernet/: summary_table.md  summary_table.tex
benchmarks/figures/macos-arm64/: summary_table.md  summary_table.tex
benchmarks/figures/rpi5/: summary_table.md  summary_table.tex
benchmarks/results/cross_machine_20251207_200835/: outlet_insecure_20251207_200835.json
benchmarks/results/macos-arm64/: CH008_macos-arm64_insecure_inlet.json  CH008_macos-arm64_secure_inlet.json  CH032_macos-arm64_insecure_inlet.json  CH032_macos-arm64_secure_inlet.json  CH064_macos-arm64_insecure_inlet.json  CH064_macos-arm64_secure_inlet.json  CH128_macos-arm64_insecure_inlet.json  CH128_macos-arm64_secure_inlet.json  CH256_macos-arm64_insecure_inlet.json  CH256_macos-arm64_secure_inlet.json  MI01_macos-arm64_insecure_inlet0.json  MI01_macos-arm64_secure_inlet0.json  MI02_macos-arm64_insecure_inlet0.json  MI02_macos-arm64_insecure_inlet1.json  MI02_macos-arm64_secure_inlet0.json  MI02_macos-arm64_secure_inlet1.json  MI04_macos-arm64_insecure_inlet0.json  MI04_macos-arm64_insecure_inlet1.json  MI04_macos-arm64_insecure_inlet2.json  MI04_macos-arm64_insecure_inlet3.json  MI04_macos-arm64_secure_inlet0.json  MI04_macos-arm64_secure_inlet1.json  MI04_macos-arm64_secure_inlet2.json  MI04_macos-arm64_secure_inlet3.json  RT0250_macos-arm64_insecure_inlet.json  RT0250_macos-arm64_secure_inlet.json  RT0500_macos-arm64_insecure_inlet.json  RT0500_macos-arm64_secure_inlet.json  RT1000_macos-arm64_insecure_inlet.json  RT1000_macos-arm64_secure_inlet.json
benchmarks/results/rpi5/: CH008_rp_insecure_inlet.json  CH008_rp_secure_inlet.json  CH032_rp_insecure_inlet.json  CH032_rp_secure_inlet.json  CH064_rp_insecure_inlet.json  CH064_rp_secure_inlet.json  CH128_rp_insecure_inlet.json  CH128_rp_secure_inlet.json  CH256_rp_insecure_inlet.json  CH256_rp_secure_inlet.json  MI01_rp_insecure_inlet0.json  MI01_rp_secure_inlet0.json  MI02_rp_insecure_inlet0.json  MI02_rp_insecure_inlet1.json  MI02_rp_secure_inlet0.json  MI02_rp_secure_inlet1.json  MI04_rp_insecure_inlet0.json  MI04_rp_insecure_inlet1.json  MI04_rp_insecure_inlet2.json  MI04_rp_insecure_inlet3.json  MI04_rp_secure_inlet0.json  MI04_rp_secure_inlet1.json  MI04_rp_secure_inlet2.json  MI04_rp_secure_inlet3.json  RT0250_rp_insecure_inlet.json  RT0250_rp_secure_inlet.json  RT0500_rp_insecure_inlet.json  RT0500_rp_secure_inlet.json  RT1000_rp_insecure_inlet.json  RT1000_rp_secure_inlet.json
benchmarks/scripts/: README.md  analyze_results.py  benchmark_inlet.py  benchmark_outlet.py  deploy_to_rpi.sh  run_benchmark_suite.py  run_cross_machine.sh  setup_cross_machine_benchmark.sh  statistical_analysis.py
docs/: faq.md  index.md  requirements.txt  troubleshooting.md
docs/api/: c-api.md  cpp-api.md  matlab.md  overview.md  python.md
docs/architecture/: overview.md
docs/esp32/: overview.md
docs/getting-started/: configuration.md  installation.md  migration.md  quickstart.md
docs/integration/: custom-apps.md  labrecorder.md  sigvisualizer.md
docs/security/: how-it-works.md  security-model.md  why-encryption.md
docs/testing/: benchmarks.md  drop-in-testing.md  integration-tests.md  overview.md  unit-tests.md
liblsl/: CMakeLists.txt  LICENSE
liblsl-ESP32/: .clang-format  .clang-tidy  .gitignore  .typos.toml  CHANGELOG.md  LICENSE  README.md  _typos.toml
liblsl-ESP32/.githooks/: pre-commit
liblsl-ESP32/.github/workflows/: ci.yml
liblsl-ESP32/benchmarks/: README.md
liblsl-ESP32/benchmarks/crypto_bench/: CMakeLists.txt  README.md  sdkconfig.defaults
liblsl-ESP32/benchmarks/scripts/: bench_utils.py  esp32_benchmark_inlet.py  esp32_benchmark_outlet.py  requirements.txt  serial_monitor.py
liblsl-ESP32/benchmarks/throughput_bench/: CMakeLists.txt  sdkconfig.defaults
liblsl-ESP32/components/liblsl_esp32/: CMakeLists.txt  idf_component.yml
liblsl-ESP32/components/liblsl_esp32/include/: lsl_esp32.h  lsl_esp32_types.h
liblsl-ESP32/components/liblsl_esp32/src/: lsl_clock.c  lsl_clock.h  lsl_esp32.c  lsl_inlet.c  lsl_inlet.h  lsl_key_manager.c  lsl_key_manager.h  lsl_outlet.c  lsl_outlet.h  lsl_protocol.h  lsl_resolver.c  lsl_resolver.h  lsl_ring_buffer.c  lsl_ring_buffer.h  lsl_sample.c  lsl_sample.h  lsl_security.c  lsl_security.h  lsl_stream_info.c  lsl_stream_info.h  lsl_tcp_client.c  lsl_tcp_client.h  lsl_tcp_common.c  lsl_tcp_common.h  lsl_tcp_server.c  lsl_tcp_server.h  lsl_udp_server.c  lsl_udp_server.h  lsl_xml_parser.c  lsl_xml_parser.h
liblsl-ESP32/docs/: architecture.md  benchmarks.md  getting-started-macos.md  security.md
liblsl-ESP32/examples/basic_inlet/: CMakeLists.txt  sdkconfig.defaults
liblsl-ESP32/examples/basic_outlet/: CMakeLists.txt  sdkconfig.defaults
liblsl-ESP32/examples/secure_inlet/: CMakeLists.txt  sdkconfig.defaults
liblsl-ESP32/examples/secure_outlet/: CMakeLists.txt  sdkconfig.defaults
liblsl-ESP32/tests/build_test/: CMakeLists.txt  sdkconfig.defaults
liblsl/docs/: conf.py
liblsl/include/: lsl_cpp.h  lsl_security.h
liblsl/include/lsl/: common.h  streaminfo.h
liblsl/src/: api_config.cpp  api_config.h  buildinfo.cpp  data_receiver.cpp  data_receiver.h  decrypting_streambuf.h  lsl_security.cpp  lsl_security.h  lsl_streaminfo_c.cpp  stream_info_impl.cpp  stream_info_impl.h  tcp_server.cpp
liblsl/src/util/: cast.cpp  cast.hpp
liblsl/testing/: CMakeLists.txt
liblsl/testing/ext/: security_api.cpp
liblsl/testing/int/: security.cpp
liblsl/tools/: cpp_secure_inlet.cpp  cpp_secure_outlet.cpp  lsl-config.cpp  lsl-keygen.cpp
tests/matlab/: README.md  run_all_tests.m  setup_lsl.m  test_interop.m  test_security_basic.m
tests/python/: conftest.py  lsl_security_helper.py  pytest.ini  test_interop.py  test_security_basic.py  test_security_perf.py  test_security_scenarios.py
(+78 files in other folders)
